Header Menu Created

--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
 <body>
 	<h1>Welcome to Git Session </h1>
 	<b> Header Menu </b>
+	<u1>
+		<li> Home </li>
+		<li> About Us! </li>
+		<li> Product </li>
+		<li> Contact Us! </li>
+	</u1>
 </body>
 </html>
