--- a/index.html
+++ b/index.html
@@ -1,4 +1,7 @@
 <html>
+<head>
+	<title> Welcome to Charusat Web Demo</title>
+</head>
 <body>
 	<h1>Welcome to Git Session </h1>
 	<b> Header Menu </b>
