--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
 <body>
 	<h1>Welcome to Git Session </h1>
 	<b> Header Menu </b>
-	<u1>
+	<ul>
 		<li> Home </li>
 		<li> About Us! </li>
 		<li> Product </li>
 		<li> Contact Us! </li>
-	</u1>
+	</ul>
+	<h2> I Love Web </h2>
 </body>
 </html>
