--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
 	<h1>Welcome to Git Session </h1>
 	<b> Header Menu </b>
 	<ul>
-		<li> Home </li>
-		<li> About Us! </li>
-		<li> Product </li>
-		<li> Contact Us! </li>
+		<li> Hme </li>
+		<li> Aout Us! </li>
+		<li> duct </li>
+		<li> Con! </li>
 		<li> hii </li>
 		<li> hello </li>
 	</ul>
